-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P5
-
Affects Version/s: 9
-
Component/s: hotspot
-
b150
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8208887 | 8u201 | Aleksey Shipilev | P5 | Resolved | Fixed | b01 |
| JDK-8201581 | 8u192 | Aleksey Shipilev | P5 | Resolved | Fixed | b01 |
| JDK-8202868 | 8u191 | Aleksey Shipilev | P5 | Resolved | Fixed | b01 |
| JDK-8202731 | 8u181 | Aleksey Shipilev | P5 | Resolved | Fixed | b06 |
| JDK-8216707 | emb-8u201 | Aleksey Shipilev | P5 | Resolved | Fixed | master |
| JDK-8203101 | emb-8u181 | Aleksey Shipilev | P5 | Resolved | Fixed | b06 |
http://hg.openjdk.java.net/jdk9/hs/hotspot/file/8c2f220c759c/src/share/vm/opto/library_call.cpp#l5508
This seems like a minor bugs, because the stubName is not used for anything important (only to identify the call in escape analysis, and there it's ok to use one or the other afaict).
- backported by
-
JDK-8201581 Montgomery multiply intrinsic should use correct name
-
- Resolved
-
-
JDK-8202731 Montgomery multiply intrinsic should use correct name
-
- Resolved
-
-
JDK-8202868 Montgomery multiply intrinsic should use correct name
-
- Resolved
-
-
JDK-8203101 Montgomery multiply intrinsic should use correct name
-
- Resolved
-
-
JDK-8208887 Montgomery multiply intrinsic should use correct name
-
- Resolved
-
-
JDK-8216707 Montgomery multiply intrinsic should use correct name
-
- Resolved
-
- relates to
-
JDK-8130150 Implement BigInteger.montgomeryMultiply intrinsic
-
- Resolved
-