8169201: Montgomery multiply intrinsic should use correct name Summary: Corrected stubName to montgomery_multiply for inline_montgomeryMultiply() Reviewed-by: aph, thartmann, zmajo